third_party/rust/enumset/tests/compile-fail/syntax.stderr
error: `#[derive(EnumSetType)]` cannot be used on enums with type parameters.
  --> tests/compile-fail/syntax.rs:11:17
   |
11 | enum GenericEnum<T> {
   |                 ^^^

error: `#[derive(EnumSetType)]` may only be used on enums
  --> tests/compile-fail/syntax.rs:17:1
   |
17 | / struct BadItemType {
18 | |
19 | | }
   | |_^

error: Duplicate field `repr`
  --> tests/compile-fail/syntax.rs:22:24
   |
22 | #[enumset(repr = "u8", repr = "u16")]
   |                        ^^^^^^^^^^^^

error: `abcdef` is not a valid internal enumset representation.
  --> tests/compile-fail/syntax.rs:28:18
   |
28 | #[enumset(repr = "abcdef")]
   |                  ^^^^^^^^

error: `abcdef` is not a valid serialized representation.
  --> tests/compile-fail/syntax.rs:34:28
   |
34 | #[enumset(serialize_repr = "abcdef")]
   |                            ^^^^^^^^
